# grantflow

./: .dockerignore  .env.enterprise.example  .env.example  .env.pilot.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IDENTITY.md  Makefile  README.md  SECURITY.md  USER.md  backup.sh  deploy.sh  docker-compose.pilot.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.clawhub/: lock.json
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml  good-first-issue.md
.github/workflows/: ci.yml  dependabot-automerge.yml  llm-eval-grounded-strict.yml  llm-eval-grounded.yml  llm-eval.yml  nightly-grounded-tail.yml  release-cut.yml  release-drafter.yml  release.yml  security.yml  supply-chain.yml  synthetic-alert-delivery-check.yml
.openclaw/: workspace-state.json
aidgraph/: README.md  pytest.ini  requirements.txt  setup_note.md
aidgraph-prod/: README.md
aidgraph/api/: __init__.py  app.py
aidgraph/core/: __init__.py  config.py  donor_strategy.py  state.py
aidgraph/exporters/: __init__.py  excel_builder.py  word_builder.py
aidgraph/memory_bank/: __init__.py  ingest.py  vector_store.py
aidgraph/swarm/: __init__.py  graph.py  hitl.py
aidgraph/tests/: __init__.py  test_integration.py  test_strategies.py  test_vector_store.py
docs/: DOC_HYGIENE.md  README.md  REFACTOR_SUMMARY.md  api-stability-policy.md  app-decomposition-plan.md  architect-grounding-scoreboard.md  architecture.md  audit-story.md  buyer-one-pager.md  ci-maintenance.md  container-hardening-runbook.md  contributor-map.md  coverage-threshold-policy.md  demo-runbook.md  deployment-checklist.md  donor_coverage_matrix.csv  donor_coverage_summary.md  donor_template_gap_prioritization.md  draft-grounding-scoreboard.md  enterprise-access-checklist.md  enterprise-access-layer.md  enterprise-quickstart.md  export-readiness-scoreboard.md  five-minute-demo.md  full-guide.md  gateway-policy-example.md  git-process.md  grounded-donor-scoreboard.md  identity-rbac-roadmap.md  llm-eval-review-template.md  mel-grounding-scoreboard.md  observability_dashboard_source_of_truth.md  observability_runtime_readiness_slo.md  observability_sli_slo_baseline.md  oem-one-pager.md  operations-runbook.md  pilot-day1-checklist.md  pilot-evaluation-checklist.md  pilot-go-no-go-quickcheck.md  pilot-kickoff-agenda.md  (+17 more)
docs/pilot-customers/: katch-evaluation-rfq-execution-checklist.md  katch-evaluation-rfq-measured-baseline.csv  katch-evaluation-rfq-outcome-memo-template.md  katch-evaluation-rfq-run-sheet.md  kazakhstan-ngo-closeout-capture.csv  kazakhstan-ngo-closeout-checkpoint.json  kazakhstan-ngo-closeout-memo-template.md  kazakhstan-ngo-discovery.md  kazakhstan-ngo-donor-corpus-plan.md  kazakhstan-ngo-execution-checklist.md  kazakhstan-ngo-external-proof-summary.md  kazakhstan-ngo-follow-up-email.md  kazakhstan-ngo-kickoff-record.md  kazakhstan-ngo-live-launch-memo.md  kazakhstan-ngo-measured-baseline.csv  kazakhstan-ngo-pilot-contract.json  kazakhstan-ngo-pilot-contract.md  kazakhstan-ngo-r1-capture.csv  kazakhstan-ngo-r1-checkpoint-template.md  (+8 more)
grantflow/: pytest.ini  requirements.txt  worker.py
memory/: 2026-02-18.md  2026-02-21.md  github-issue-codex-fallback.md  qwen-oauth-setup.md
scripts/: api_contract_guard.py  baseline_fill_template.py  bootstrap_dev_env.sh  buyer_brief.py  buyer_demo_open.py  case_study_pack.py  check_llm_grounded_strict_donor_gate.py  check_seeded_corpus.py  classify_eval_regressions.py  clean_demo_artifacts.py  demo_pack.py  docker_compose_smoke.sh  eval_ab_diff.py  executive_pack.py  export_target_live.py  kz_ai_training_demo.py  latest_links.py  latest_open_order.py  oem_pack.py  open_latest_send.py  pilot_benchmark_baseline.py  pilot_evidence_pack.py  pilot_handout.py  pilot_metrics.py  pilot_pack.py  pilot_quickcheck.sh  pilot_scorecard.py  pr_title_guard.py  release_demo_bundle.py  release_guard.py  runtime_grounded_gate_smoke.py  send_bundle_index.py  toc_snapshot.py  verify_latest_stack.py
(+323 files in other folders)
