[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grantflow"
dynamic = ["version"]
description = "Compliance-aware, agentic workflow engine for donor-funded proposal drafting."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.128.8",
    "uvicorn[standard]==0.39.0",
    "pydantic==2.12.5",
    "langgraph==1.1.6",
    "langgraph-checkpoint==4.0.1",
    "langchain==1.2.11",
    "langchain-core==1.2.28",
    "langchain-openai==1.1.12",
    "langchain-text-splitters==1.1.1",
    "chromadb==1.5.7",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
    "pymupdf==1.27.2.2",
    "python-multipart==0.0.22",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "tenacity==8.5.0",
    "redis==5.3.1",
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "isort==6.1.0",
    "ruff==0.15.2",
    "pre-commit==4.3.0",
    "mypy==1.20.0",
    "pytest==9.0.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "grantflow.core.version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["grantflow*"]
namespaces = true

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | chroma_db
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 311
known_first_party = ["grantflow"]
skip = ["chroma_db", ".venv", "venv", "env"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["chroma_db"]

[tool.ruff.lint]
select = ["E", "F"]
extend-select = ["E701", "E702", "E703", "E731"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"grantflow/tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = "(^chroma_db/|^build/|^dist/|^grantflow/tests/)"
